=head1 NAME

Memcached::libmemcached::Changes - List of significant changes

As of $Date: 2008-01-08 15:54:15 +0000 (Tue, 08 Jan 2008) $ $Revision$

=head2 Changes in 0.1901 (svn r140) 10th April 2008

  Sync with libmemcached 0.19.
  Added walk_stats method for fetching stats via a callback
    thanks to Daisuke Maki.

=head2 Changes in 0.1701 (svn r129) 3rd March 2008

  Sync with libmemcached 0.17.
  Perl API for memcached_version returns the version info.
  Added auto-generated Memcached::libmemcached::constants docs.
  Improved docs.
  Assorted minor fixes.

=head2 Changes in 0.1405 (svn rXXX)

  Added official object-oriented API for perl-specific extensions.
  Allow SubclassName->new as alias for memcached_create.
  Deprecated perl-specific functions superceeded by methods:
    memcached_errstr                - now $memc->errstr
    memcached_mget_into_hashref     - now $memc->mget_into_hashref
    memcached_set_callback_coderefs - now $memc->set_callback_coderefs
  Added -g/-pg options to Makefile.PL to enable debug/profiling.
  Changed memcache object to be blessed hash instead of blessed int.

=head2 Changes in 0.1404 (svn r106) 29th Jan 2008

  Fixes for perl 5.6.
  Removed dependency on Time::HiRes for testing.

=head2 Changes in 0.1402 (svn r102) 27th Jan 2008

  Added tracing via PERL_LIBMEMCACHED_TRACE env var.
  Added perl callbacks for get and set.
  Added many more functions and improved the docs.
  Reenable perl 5.006 as we supply our own xsubpp now.

=head2 Changes in 0.1401

  Added memcached_errstr and related $memc state management.
  Changes functions to return simple boolean code.
  Added memcached_replace, memcached_cas
  More tests.

=head2 Changes in 0.1308

  Includes libmemcached-0.14
  memcached_return values are now boolean (true, defined false, or undef)
  Added memcached_errstr($memc) to access last error code and string.
  Bundle xsubpp to avoid problems interfacing with our custom ParseXS.

=head2 Changes in 0.1307
